styles/Header.module.css
.header, .headerContainer {
   height: 50px;
   border-bottom: 1px solid #d3d6da;
   min-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
}

.left, .right {
    display: flex;
    flex-direction: row;
    flex-basis: 40%;
}

.right {
    text-align: right;
    align-items: right;
    justify-content: right;
}

.logo {
    cursor: pointer;
}

.logo {
   flex-grow: 1;
   font-size: 24px;
   font-weight: 900;
}

.logo > span {
    font-weight: 100!important;
}

.navbarButton, .dummyButton, .faqButton, .yesterday {
    margin-right: 30px;
    margin-left: 30px;
    font-size: 18px;
    padding: .5rem .8rem;
}

.faqButton, .dummyButton {
    margin-left: 0!important;
    margin-right: 0!important;
}

.dummyButton {
    color: white;
}

.navbarButton:hover, .faqButton:hover, .yesterday:hover {
    color: #ccc;
    cursor: pointer;
}

.yesterday {
    font-weight: bold;
    background: linear-gradient(to right, #EEbd89, #d13abd);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-weight: var(--fontWeight-bold);
  font-family: var(--font-heading);
}

@media (max-width: 740px) {
    .navbarButton, .yesterday {
        margin-left: 6px;
        margin-right: 6px;
    }

    .navbarButton, .faqButton, .dummyButton, .yesterday {
        font-size: 14px;
        padding: .5rem .6rem;
        /* font-weight: bold; */
    }

    .logo {
        font-size: 18px;
        /* font-weight: 900; */
    }
}

@media (max-width: 500px) {
    .navbarButton, .faqButton, .dummyButton, .yesterday {
        font-size: 12px;
    }

    .logo {
        font-size: 14px;
    }
}

